--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
 <title>welcomemovie</title>
 <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+
+<script>
+  window.onload = function() {
+  var button_obj = document.getElementById('buttion1');
+
+  button_obj.onclick = function () {
+  var msg = "hi";
+  alert(msg);
+  };
+  };
+</script>
+
+  <button id='buttion1'> Click </button>
+
+
+
 </head>
 
 <body>
