--- a/reviews.html
+++ b/reviews.html
@@ -18,44 +18,54 @@
     document.querySelector('#night_day').value='night';
   }
   ">
-<h1 style="font-size:60px; text-align:center; border:5px pink solid; background-color:pink; padding:30px; margin:auto;width:100%"><a href="index.html">The Movies</h1></a>
+<div class="container">
+  <div class="subject">
+    <h1 style="font-size:60px; text-align:center; padding:45px; margin:auto;width:100%"><a id="first" href="index.html">The Movies</h1></a>
+  </div>
 
-<ol class="list">
-  <h2>살아있다(2020)</h2><br>
-  <a href="release.html"><li>Movie release</li></a>
-  <a href="reviews.html"><li>Movie reviews</li></a>
-</ol>
+    <ol class="list">
+      <h2 style="margin-bottom:15px;">살아있다(2020)</h2>
+      <a href="release.html"><li>Movie release</li></a>
+      <a href="reviews.html"><li>Movie reviews</li></a>
+    </ol>
 
-<div>
-<h3 style="color:white">Movie reviews</mark></h3>
-<br>
-<a href="https://search.naver.com/search.naver?where=post&sm=tab_jum&query=%23%EC%82%B4%EC%95%84%EC%9E%88%EB%8B%A4+%EB%A6%AC%EB%B7%B0" target="_blank"
-title="naver"><strong><mark style="background-color:#82FA58">NAVER ref.</mark></strong></a>
-<ol>
-<span style="background-color:grey"><strong><li>The plot of a movie</li></strong></span>
-<p style="margin-top:15px;" style="margin-bottom:15px;">The whole city in this movie was thrown into confusion.
-  Some people seems to be suffering from unexplained illnesses.
- The people attacked the public like zombie. They are very aggressive and eat people like a starving animal.
- The couple who are the leading actors in this movie, 박신혜(유빈) and 유아인(준우) were isolated in their apartment
-structured corridor-type building system.
- They trapped in their several homes surrounded by zombies and became tired.
- Finally they tried to escape into space and fought with zombies by pulling together...
-</p>
-<span><strong><li>character traits of two main actors</li></strong></span>
-<p style="margin-top:15px;" style="margin-bottom:15px;">
-'준우' represent today's younger and digital generation. he has warm hearts and a little bold.
-<br>'유빈' is a staid character and shows confidence and a strategic decision for surmounting their crisis.
-  </ul>
-<span><strong><li>Behind story</li></strong></span>
-<p style="margin-top:15px;" style="margin-bottom:15px;">
-  <ul>
-    <li>One of the main actor, 유아인(준우) showed his hair in a state of short and bleached. Actually he supposed to wear a long wig but the director thought that it looks better on 준우 character in the movie than wig.</li>
-  <li>The background in this movie is an apartment complex in 여의도. It is structured as corridor-type building system which is quite unusual these days.
-    The director was intended to show both sense of freshment from the young and familiarity at 30 years of age.</li>
-<li>To express the digital age, there are a lot of factors such as concept of pro-youtuber, communication with SNS, utilization of drone at a time of crisis.</li>
-  </ul>
-</ol>
+<div class="article">
+  <a href="https://search.naver.com/search.naver?where=post&sm=tab_jum&query=%23%EC%82%B4%EC%95%84%EC%9E%88%EB%8B%A4+%EB%A6%AC%EB%B7%B0" target="_blank"
+  title="naver"><strong><mark style="background-color:#82FA58">NAVER ref.</mark></strong></a><br><br>
+  <img src="2.jpg" width="80%" style="margin-top:15px">
+</div>
+<div class="article2">
+  <h3 style="color:darkgrey; margin-top:15px">Movie reviews</mark></h3> <br>
 
-<div>
+  <ol>
+    <span style="background-color:grey"><strong><li>The plot of a movie</li></strong></span>
+    <p style="margin-top:15px;" style="margin-bottom:15px;">The whole city in this movie was thrown into confusion.
+      Some people seems to be suffering from unexplained illnesses.
+      The people attacked the public like zombie. They are very aggressive and eat people like a starving animal.
+      The couple who are the leading actors in this movie, 박신혜(유빈) and 유아인(준우) were isolated in their apartment
+      structured corridor-type building system.
+      They trapped in their several homes surrounded by zombies and became tired.
+      Finally they tried to escape into space and fought with zombies by pulling together...
+    </p>
+    <span><strong><li>character traits of two main actors</li></strong></span>
+    <p style="margin-top:15px;" style="margin-bottom:15px;">
+      '준우' represent today's younger and digital generation. he has warm hearts and a little bold.
+      <br>'유빈' is a staid character and shows confidence and a strategic decision for surmounting their crisis.
+    <span><li><strong>Behind story</strong></li></span>
+    <p style="margin-top:15px;" style="margin-bottom:15px;">
+      <ul>
+        <li>One of the main actor, 유아인(준우) showed his hair in a state of short and bleached. Actually he supposed to wear
+          a long wig but the director thought that it looks better on 준우 character in the movie than wig.</li>
+        <li>The background in this movie is an apartment complex in 여의도. It is structured as corridor-type building system
+          which is quite unusual these days.     The director was intended to show both sense of freshment from the young and
+          familiarity at 30 years of age.</li>
+        <li>To express the digital age, there are a lot of factors such as concept of pro-youtuber, communication with SNS,
+          utilization of drone at a time of crisis.</li>
+      </ul>
+    </p>
+    </ol>
+</div>
+
+</div>
 </body>
 </html>
