--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
 
-
-
 </head>
 
 <body>
@@ -20,35 +18,56 @@
     };
     };
   </script>
-  <button id='buttion1'> Click </button>
+    <button id='buttion1'> Click </button>
 
-  <input id="night_day" type="button" value="night" onclick="
-  if(document.querySelector('#night_day').value==='night') {
+
+
+  <input type="button" value="night" onclick="
+  if(this.value==='night') {
     document.querySelector('body').style.backgroundColor='black';
     document.querySelector('body').style.color='white';
-    document.querySelector('#night_day').value='day';
+    this.value='day';
   } else {
     document.querySelector('body').style.backgroundColor='white';
     document.querySelector('body').style.color='black';
-    document.querySelector('#night_day').value='night';
+    this.value='night';
   }
   ">
 
-<h1 style="font-size:60px; text-align:center; border:5px pink solid; background-color:pink; padding:30px; margin:auto;width:100%"><a href="index.html">The Movies</h1></a>
-
+  <input type="button" value="night" onclick="
+  var target= document.querySelector('body')
+  if(this.value==='night') {
+    target.style.backgroundColor='black';
+    target.style.color='white';
+    this.value='day';
+  } else {
+    target.style.backgroundColor='white';
+    target.style.color='black';
+    this.value='night';
+  }
+  ">
+<div class="container">
+  <div class="subject">
+    <h1 style="font-size:60px; text-align:center; padding:45px; margin:auto;width:100%"><a id="first" href="index.html">The Movies</a></h1>
+  </div>
 
 <ol class="list">
-  <h2>살아있다(2020)</h2><br>
+  <h2 style="margin-bottom:15px;">살아있다(2020)</h2>
   <a href="release.html"><li>Movie release</li></a>
   <a href="reviews.html"><li>Movie reviews</li></a>
 </ol>
-
-<div>
-<p style="margin-top:30px;">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/ifyPEnKreJI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</p>
-<img src="alive.jpg" width=800 style="margin-top:30px;">
 </div>
 
+<div class="article1">
+  <p style="margin-top:30px;">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ifyPEnKreJI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
+</div>
+
+<div class="article2">
+  <img src="alive.jpg" style="margin-top:30px;">
+</div>
+
+</div>
 </body>
 </html>
