--- a/release.html
+++ b/release.html
@@ -18,25 +18,33 @@
     document.querySelector('#night_day').value='night';
   }
   ">
-<h1 style="font-size:60px; text-align:center; border:5px pink solid; background-color:pink; padding:30px; margin:auto;width:100%"><a href="index.html">The Movies</h1></a>
 
-<ol class="list">
-  <h2>살아있다(2020)</h2><br>
-  <a href="release.html"><li>Movie release</li></a>
-  <a href="reviews.html"><li>Movie reviews</li></a>
-</ol>
+<div class="container">
+  <div class="subject">
+    <h1 style="font-size:60px; text-align:center; padding:45px; margin:auto;width:100%"><a id="first" href="index.html">The Movies</h1></a>
+  </div>
 
-<div>
-<h3 style="color:white">Movie Release</mark></h3>
-<br>
-<a href="https://search.naver.com/search.naver?sm=top_hty&fbm=1&ie=utf8&query=%EC%82%B4%EC%95%84%EC%9E%88%EB%8B%A4" target="_blank" title="naver"><strong>
-  <mark style="background-color:#82FA58">NAVER ref.</mark></strong><br></a>
-<br>
-<p style="margin-bottom:45px;">This movie is released on 24 June, 2020.<br>
-It was made by a director, 조일형 who had produced a film, <u>진(2011)</u>
-<br>The movie, 살아남다 features two outstanding performances by <strong>박신혜, 유아인</strong> who are famous actors in Korea.
-<br>It reached about <u>1.9 milion people</u> within a month and received a <strong>7.05</strong> rating by NAVER's standards.</p>
-<img src="1.jpg" width="80%">
+    <ol class="list">
+      <h2 style="margin-bottom:15px;">살아있다(2020)</h2>
+      <a href="release.html"><li>Movie release</li></a>
+      <a href="reviews.html"><li>Movie reviews</li></a>
+    </ol>
+
+<div class="article">
+
+  <a href="https://search.naver.com/search.naver?sm=top_hty&fbm=1&ie=utf8&query=%EC%82%B4%EC%95%84%EC%9E%88%EB%8B%A4" target="_blank" title="naver"><strong>
+  <mark style="background-color:#82FA58">NAVER ref.</mark></strong></a><br><br>
+  <img src="1.jpg" width="90%">
+</div>
+
+<div class="article2">
+  <h3 style="color:darkgrey; margin-bottom:35px; margin-top:15px">Movie Release</h3>
+  <p style="margin-bottom:45px;margin-top:15px">This movie is released on 24 June, 2020.
+    It was made by a director, 조일형 who had produced a film, <u>진(2011)</u>
+    The movie, 살아남다 features two outstanding performances by <strong>박신혜, 유아인</strong> who are famous actors in Korea.
+   It reached about <u>1.9 milion people</u> within a month and received a <strong>7.05</strong> rating by NAVER's standards.</p>
+</div>
+
 </div>
 </body>
 </html>
