--- a/index4.html
+++ b/index4.html
@@ -32,10 +32,10 @@
 
 <div class="article">
   <p style="margin-top:30px;">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/lOOZ9IiCWp8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8RcchFE9LA4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
 
-  <img src="1987.jpg" style="margin-top:30px;">
+  <img src="post.jpg" style="margin-top:30px; width:50%;">
 </div>
 
 </div>
