--- a/reviews3.html
+++ b/reviews3.html
@@ -35,25 +35,20 @@
   <img src="3-2.jpg" width="60%" style="margin-top:15px">
 
   <h3 style="color:darkgrey; margin-top:15px">Movie reviews</mark></h3> <br>
-
-  <ol>
-
-      <strong><li style="margin-top:45px;">2004 아테네 올림픽 여자 핸드볼 선수들의 감동실화</li></strong>
-      <p style="margin-top:15px;" style="margin-bottom:15px;">
-        ........
-     </p>
-
-
-      <strong><li style="margin-top:45px;">검-경 대립과 부검</li></strong>
-      <p style="margin-top:15px;" style="margin-bottom:15px;">
-    ...
-    </p>
-
-    <strong><li style="margin-top:45px;">사건 축소 폭로</li></strong>
-
-      <p style="margin-top:15px;" style="margin-bottom:15px;">
-...
-     </p>
+  <p style="font-size:30px; color:pink;">2004 아테네 올림픽 여자 핸드볼 선수들의 감동실화</p>
+    <p style="margin-top:15px;" style="margin-bottom:15px;">
+    <strong>아테네 2004/여자 핸드볼, 세계 최강 덴마크에 승부던지기 석패</strong><br>
+    후회없는 한판이었다. 한국 여자 핸드볼이 세계 최강의 덴마크를 맞아 기적 같은 투혼을 불사르며 금메달 만큼이나 값진 은메달을 목에 걸었다.한국은 29일(한국시각) 헬리니코 인도어어리나에서 열린 아테네올림픽 여자핸드볼 결승에서 숙적 덴마크와 2차 연장까지 가는 숨막히는 접전 끝에 34-34로 승부를 가리지 못한 뒤 승부던지기(축구의 승부차기)에서 2-4로 패했다.
+    이로써 88서울올림픽과 92바르셀로나올림픽 2연패한 한국은 12년만에 정상 복귀를 노렸으나 ‘덴마크 징크스’를 털어내는데 실패했고 덴마크는 96년 애틀랜타올림픽을 포함, 대회 3연패를 달성했다.
+    한국 여전사들은 신장과 파워에서 앞선 ‘바이킹의 후예들’을 맞아 뱃속에서 솟구치는 강한 투지로 맞섰고 결국 2차례 연장전에 이은 승부던지기 끝에 아쉽게 패했지만 최고의 명승부를 펼치며 ‘아름다운 패자’로 남았다.
+    숨막히는 접전이었다. 달아나면 쫓아가 뒤집고 다시 추월당하면 쫓아가기를 거듭했다.</p>
+    <p style="margin-top:15px;" style="margin-bottom:15px;">
+    10분씩의 2차례 연장전을 포함해 80분의 혈전을 펼쳤으나 전광판에 쓰여진 점수는 34-34. 결국 5명씩의 승부던지기에서 상대 4번째 선수 로엔데 헨리테의 손을 떠난 볼이 골키퍼 오영란을 비켜 네트에 꽂히는 순간 누구보다 거친 몸싸움으로 장신 선수들을 막아냈던 허순영은 코트 바닥에 드러누웠다.
+    은퇴 시기를 미루며 대표팀에 복귀한 오성옥과 임오경도 끝내 눈시울을 붉혔다. 96년 애틀란타올림픽 때 결승에서 초반 리드를 지키지 못하고 연장 끝에 33-37로 패했던 기억이 되살아나 아쉬움은 더욱 컸다.
+    후반 막판이 못내 아쉬웠다. 22-25로 패색이 짙던 한국은 종료 5분여를 남기고 최임정, 문필희, 장소희의 연달아 3골을 뽑아내며 순식간에 25-25로 승부를 원점으로 돌렸다.
+    종료 40초를 남기고 덴마크 선수의 워킹으로 공격권까지 빼앗았다. 종료 3초 전 문필희가 강슛을 날렸으나 골키퍼의 왼손을 맞고 튀어나갔다.
+    연장전에서도 손에 쥐어질 듯 하던 승리는 끝내 잡히지 않았다. 29-29로 팽팽하게 맞선 1차 연장전 종료 20초를 남기고 장소희의 왼쪽 다이빙슛이 골포스트를 벗어났다.
+    2차 연장에서도 김차연이 26초를 남기고 34-33 리드를 이끌어냈으나 종료 10초를 남기고 덴마크에게 동점골을 내주면서 끝내 승부던지기로 끌려갔다.
      </p>
    </div>
 
